--- a/www/index.html
+++ b/www/index.html
@@ -52,8 +52,17 @@
                     <button type="submit" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b">Ajouter</button>
                 </form>
 
-                <ul id="todo-list" data-role="listview" data-inset="true">
-                </ul>
+                <div class="tasks-section">
+                    <h2>Tâches en cours</h2>
+                    <ul id="ongoing-tasks" data-role="listview" data-inset="true">
+                    </ul>
+                </div>
+
+                <div class="tasks-section">
+                    <h2>Tâches terminées</h2>
+                    <ul id="completed-tasks" data-role="listview" data-inset="true">
+                    </ul>
+                </div>
             </div>
         </div>
         <!-- <script src="cordova.js"></script> -->
